vlib/v/checker/tests/field_can_not_be_from_the_same_type_as_containing_struct.vv
type Foo = Bar

struct Bar {
	pfield &Foo = unsafe { 0 }
	field  Foo  = Bar{}
}

fn main() {
	bar := Bar{}
	println(bar)
}
